[project]
name = "FontCollector"
description = "FontCollector for Advanced SubStation Alpha file."
authors = [
    { name = "moi15moi", email = "moi15moismokerlolilol@gmail.com" },
]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ass>=1.0.0, < 2",
    "ass-tag-analyzer < 1",
    "fontTools>=4.55.0, < 5",
    "freetype-py>2, < 3",
    "FindSystemFontsFilename>=0.3.2, < 1",
    "langcodes>=3.5.0, < 4",
]
classifiers=[
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Developers",
        "Intended Audience :: End Users/Desktop",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Programming Language :: Python :: 3.14",
        "Typing :: Typed",
]
dynamic = ["version"]

[project.scripts]
fontcollector = "font_collector.__main__:main"
mkvfontvalidator = "font_collector.mkvfontvalidator:main"

[project.urls]
Source = "https://github.com/moi15moi/FontCollector/"
Tracker = "https://github.com/moi15moi/FontCollector/issues/"

[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "font_collector._version.__version__" }

[tool.setuptools.packages.find]
include = ["font_collector*"]

[tool.mypy]
warn_unused_configs = true
warn_unused_ignores = false
strict = true
files = [
    # TODO Add the tests folder
    "font_collector"
]

[[tool.mypy.overrides]]
module = "ass.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "ass_tag_analyzer.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "find_system_fonts_filename.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fontTools.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "freetype.*"
ignore_missing_imports = true

[tool.coverage.report]
include = [
    "font_collector/*",
    ]
exclude_also = [
    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
    ]
